# shoppy

./: .gitignore  README.md  hello.py  package-lock.json  pyproject.toml  requirements.txt  tailwind.config.js
accounts/: admin.py  middleware.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_profile_country.py
accounts/templates/accounts/: profile.html
accounts/workers/: urls.py  views.py
items/: admin.py  filters.py  forms.py  managers.py  mixins.py  models.py  urls.py  utils.py  views.py
items/api/: permissions.py  serializers.py  urls.py  views.py
items/migrations/: 0001_initial.py  0002_item_views.py  0003_item_items_name_dd4454_idx_and_more.py
items/templates/items/: items_create.html  items_detail.html  items_list.html
items/templates/items/partials/: item_delete.html  item_update.html  show_description.html
requirements/: local.txt  production.txt
src/: settings.py  urls.py  views.py
src/settings/: base.py  local.py  production.py
static/css/: style.css
templates/: base.html  home.html
templates/allauth/layouts/: base.html
