[project]
name = "shoppy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cloudinary>=1.42.2",
    "django>=5.1.6",
    "django-countries>=7.6.1",
    "django-filter>=25.1",
    "django-taggit>=6.1.0",
    "djangorestframework>=3.15.2",
    "pillow>=11.1.0",
    "python-decouple>=3.8",
]
